Fix Iotix style.css spacing

--- a/iotix/style.css
+++ b/iotix/style.css
@@ -15,6 +15,14 @@ Tags: one-column, custom-colors, custom-menu, custom-logo, editor-style, feature
 */
 
 /*
+ * Font smoothing
+ */
+body {
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-font-smoothing: antialiased;
+}
+
+/*
  * Link styles
  * https://github.com/WordPress/gutenberg/issues/42319
  */
